--- a/jenkins/account/resources/css/account.css
+++ b/jenkins/account/resources/css/account.css
@@ -19,10 +19,11 @@ header .navbar {
 }
 
 .navbar-title {
-    background-image: url('../img/logo.png');
+    background-image: url('../img/jenkins-header.svg');
+    background-size: 148px 30px;
     height: 25px;
     background-repeat: no-repeat;
-    width: 123px;
+    width: 120px;
     margin: 3px 10px 5px;
     text-indent: -99999px;
 }
